# AI_Agent

./: .gitignore  2주차_진행상태.pptx  README.html  README.md  docker-compose.yml  dockerfile  requirements.txt
ai_test/: README.md  _summarize_task_.json  comprehensive_report_Salesforce.json  comprehensive_report_google.json  comprehensive_report_nvidia.json  comprehensive_report_디엔솔루션즈.json  comprehensive_report_삼성전자.json  comprehensive_report_스트라드비젼.json  comprehensive_report_에스비티글로벌.json  consulting_task_.json  docker-compose.yml  dockerfile  financial_analysis_디엔솔루션즈.json  financial_task.md  news_[company_name].md  pyproject.toml  report.md  reporting_task.md  requirements.txt  research_resport.md  test.json
ai_test/knowledge/: SBTGlobal_knowledge.txt  new_sbt_knowledge.txt  user_preference.txt
ai_test/outputs/data_analyzer/: analysis_results_2025.json
ai_test/outputs/salesforce_connector/: Account_data_2025.csv  Opportunity_data_2025.csv  extracted_data_2025.csv
ai_test/outputs/summary_generator/: summary_2025.json  summary_2025.md
ai_test/outputs/translator/: translated_summary_2025.json
ai_test/results/: 0090e458-7058-4c64-b509-04267dc14324.json  24508065-f191-41a5-a0d5-7d86f8318789.json  297aea40-8cd7-4454-9853-9bc83d3da74a.json  46895b63-5b37-49a8-8209-25fdb0eeac00.json  509f09bd-f04c-40a5-bbdc-3df22835b767.json  8aa0caa2-ccef-4fa5-a2c3-e2b093a6eece.json  8f84b444-5e2c-4bdc-bd35-542579ee3770.json  d6298e77-d2fc-4538-9166-4e15ee90ca78.json  e3c4c4e3-1330-4750-ab70-78f4bf008c99.json
ai_test/src/ai_test/: crew.py  gs_crew.py  gs_main.py  gs_sf_connect.py  (+8 more)
(+49 files in other folders)
