[project]
name = "ai_test"
version = "0.1.0"
description = "ai_TEST using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "docling>=2.42.2",
]

[project.scripts]
ai_test = "ai_test.main:run"
run_crew = "ai_test.main:run"
train = "ai_test.main:train"
replay = "ai_test.main:replay"
test = "ai_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
